--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Do Not Sleep</string>
     <string name="group_17_inc">Group 17 Inc.</string>
+    <string name="home">Home</string>
+    <string name="setting">Setting</string>
 </resources>
