--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="start">START</string>
-    <string name="app_start">By pressing the button the app starts to detecting your face</string>
+    <string name="app_start">By pressing the start button the app starts detecting your face</string>
     <string name="opened_eyes">Open eyes detected</string>
     <string name="closed_eyes">It seems your eyes are closed</string>
     <string name="user_not_detected">Face not detected</string>
